--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -120,7 +120,7 @@ input, select, textarea {
 /* Type */
 
 	body {
-		background-color: 5#56d28d;
+		background-color: 5#03030;
 		color: rgba(255, 255, 255, 0.65);
 	}
 
