--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,10 +100,10 @@ input, select, textarea {
 
 	body {
 		background-color: #313131;
-		background-image: -moz-linear-gradient(45deg, #494949 15%, #323232 85%);
-		background-image: -webkit-linear-gradient(45deg, #494949 15%, #323232 85%);
-		background-image: -ms-linear-gradient(45deg, #494949 15%, #323232 85%);
-		background-image: linear-gradient(45deg, #494949 15%, #323232 85%);
+		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #494949 15%, #323232 85%);
+		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #494949 15%, #323232 85%);
+		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #494949 15%, #323232 85%);
+		background-image: url("images/overlay.png"), linear-gradient(45deg, #494949 15%, #323232 85%);
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -2185,13 +2185,13 @@ input, select, textarea {
 	input[type="radio"]:checked + label:before {
 		background-color: #ffffff;
 		border-color: #ffffff;
-		color: #935d8c;
+		color: #1d1d1d;
 	}
 
 	input[type="checkbox"]:focus + label:before,
 	input[type="radio"]:focus + label:before {
-		border-color: #8cc9f0;
-		box-shadow: 0 0 0 1px #8cc9f0;
+		border-color: #1d1d1d;
+		box-shadow: 0 0 0 1px #303030;
 	}
 
 	::-webkit-input-placeholder {
